# proton-fusion

./: .gitignore  Cargo.toml  README.md  build.sh  install-ge-proton.sh  install.sh
.github/workflows/: release.yml  test.yml
proton-updater/: Cargo.toml
proton-updater/src/: main.rs
proton-updater/src/proton_builds/: mod.rs  proton_cachyos.rs  proton_ge.rs  proton_tkg.rs
setup/: install-ge-proton.sh
src/: main.rs
steam-tool/: compatibilitytool.vdf  launch.sh  toolmanifest.vdf
steam-tools/: note.txt
steam-tools/GE-Proton/: compatibilitytool.vdf  launch.sh
steam-tools/GE-Proton-Fusion/: compatibilitytool.vdf  launch.sh  toolmanifest.vdf
